--- a/Alllive/Content/Site.css
+++ b/Alllive/Content/Site.css
@@ -5,9 +5,8 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    /*padding-left: 15px;*/
+    padding-left: 15px;
     padding-right: 15px;
-    padding-left: 0px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -22,4 +21,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+h1 {
+    padding: 0;
+    margin: 0px 0px 0px
 }
