got registration working still need password verification though now adding login

--- a/Alllive/Views/User/Schedule.cshtml
+++ b/Alllive/Views/User/Schedule.cshtml
@@ -4,28 +4,36 @@
 }
 
 <h2>Schedule</h2>
-@foreach (var item in Model)
+@if (Model != null)
 {
-    <div class="container">
-        <div class="row">
-            <div class="col-sm col-md-4">
-                <div class="col-md-4">
-                    IMAGE
-                </div>
-                <div class="col-md-4">
-                    <b>@item.SessionID</b>
-                    <br />
-                    @item.DateTimeScheduledIn
-                </div>
-                <div class="col-md-4">
-                    @item.DateTimeScheduleOut
-                </div>
-                <div class="col-md-4">
-                    @item.SessionDescription
-                </div>
-               
+    foreach (var item in Model)
+    {
+        <div class="container">
+            <div class="row">
+                <div class="col-sm col-md-4">
+                    <div class="col-md-4">
+                        IMAGE
+                    </div>
+                    <div class="col-md-4">
+                        <b>@item.SessionID</b>
+                        <br />
+                        @item.DateTimeScheduledIn
+                    </div>
+                    <div class="col-md-4">
+                        @item.DateTimeScheduleOut
+                    </div>
+                    <div class="col-md-4">
+                        @item.SessionDescription
+                    </div>
 
+
+                </div>
             </div>
         </div>
-    </div>
+    }
+}
+else
+{
+    <div>You have nothing scheduled yet</div>
+
 }
