--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         <li>@Html.ActionLink("Join Meeting", "Login", "Home")</li>
                         <li>@Html.ActionLink("Start Meeting", "Login", "Home")</li>
                         <li>@Html.ActionLink("Distance Learning", "DistanceLearning", "Navigation")</li>
+                        <li>@Html.ActionLink("Online Childrens Yoga", "OnlineYoga", "Navigation")</li>
 
 
                     }
